<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Floating Soft Keys</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
	<string name="click_to_close">Click to close Floating Soft Keys</string>
	<string name="enter_size">Button size (in dp)</string>
	<string name="reload_bar">Reload bar</string>
	<string name="transparency">Transparency</string>
	<string name="spacing">Button spacing (in dp)</string>
	<string name="custom_icon">Use custom icons</string>
	<string name="custom_icon_tip">TIP: To get more custom icon themes or to find out how to create one yourself, click here.</string>
	<string name="available_themes">Available themes</string>
	<string name="default_theme">Rhoadster91\'s keys (default)</string>
	<string name="cancel">Cancel</string>
	<string name="done">Done</string>
	<string name="load_failed">Failed to load theme</string>
	<string name="start_boot">Start at boot</string>
	<string name="home_long_press">Home long press action</string>
	<string name="change">Change</string>
	<string name="a_none">(none)</string>
	<string name="a_lock_long">Power button (Long Press)</string>
	<string name="a_lock">Power button</string>	
	<string name="a_vol">Volume control</string>
	<string name="a_selected">Selected</string>	
	<string name="not_root">Could not acquire root permissions. Please reload the bar and give root permissions.</string>
	<string name="show_notif">Show persistent notification</string>
	<string name="horizontal_orientation">Horizontal Orientation</string>
	<string name="invisible_drag">Invisible drag icon</string>
	<string name="hide_title">Hide persistent notification</string>
	<string name="hide_text">Jelly Bean detected on your phone. If you check this, it will put a transparent notification icon in the tray. But for Jelly Bean users, there is an option to hide notifications from App Info in settings. What would you like to do?</string>
	<string name="gotoappinfo">Go to App Info</string>
	<string name="putnothingicon">Use transparent icon</string>
	<string name="changelog">What\'s New</string>
	<string name="cool">Cool!</string>
	<string name="close">Turn off bar</string>
	<string name="vibrate">Vibrate on button click</string>
	<string name="app">Application Shortcuts</string>
	<string name="add">Add</string>
	<string name="confirm">Confirm</string>
	<string name="remove">Are you sure you want to remove this?</string>
	<string name="yes">Yes</string>
	<string name="no">No</string>
	<string name="plus">+</string>
	<string name="minus">-</string>
	<string name="min_to_notif">Collapse to notification shade on Back long press</string>
	<string name="min_text">Click to show floating navbar</string>
	<string name="low_priority_notif">Low priority notification (Android 4.1+ only)</string>
	<string name="help">Help</string>
	<string name="backbutton">Back button</string>
	<string name="homebutton">Home button</string>
	<string name="menubutton">Menu button</string>
	<string name="dragbutton">Drag button</string>
	<string name="presshelp">Press Action</string>
	<string name="longpresshelp">Long-press Action</string>
	<string name="backbuttonpress">Go back one step</string>
	<string name="homebuttonpress">Go to home screen</string>
	<string name="menubuttonpress">Show menu</string>
	<string name="dragbuttonpress">Move navbar around/unlock when docked to left edge</string>
	<string name="backbuttonlongpress">Collapse to left edge/notification shade</string>
	<string name="homebuttonlongpress">Summon "ring" of special actions and app shortcuts</string>
	<string name="menubuttonlongpress">Show recent apps (Android 3.0+ only)</string>
	<string name="dragbuttonlongpress">Unlock bar when anchored</string>
	<string name="aboutfsk">About Floating Soft Keys</string>
	<string name="about">About</string>
	<string name="version">Version</string>
	<string name="by">by RHOADSTER91</string>
	<string name="tag">Made by me. Tailored for you.</string>
	<string name="note">This app started off as an experiment but I feel has the potential to be more than just that. I work hard to try to bring to you a flawless, free of cost app without any ads. So if you like my work, please leave a good rating on the Play Store.</string>
	<string name="sendfeedback">Send feedback</string>
	<string name="leaverating">Rate on Play Store</string>
</resources>
