<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp" >
    <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-bold-condensed"
            android:text="@string/backbutton"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#33b5e5" />
        
        <TextView
            android:id="@+id/tvPress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-bold-condensed"
            android:text="@string/presshelp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#33b5e5" />

        <TextView
            android:id="@+id/tvPressAction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/backbuttonpress"
            android:textAppearance="?android:attr/textAppearanceMedium" />


        <TextView
            android:id="@+id/tvLongPress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-bold-condensed"
            android:text="@string/longpresshelp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#33b5e5" />
        
        <TextView
            android:id="@+id/tvLongPressAction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/backbuttonlongpress"
            android:textAppearance="?android:attr/textAppearanceMedium" />

</LinearLayout>
